# PWol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: 3rdLibrary.cmake  PWol.cmake  fmt.cmake  spdlog.cmake
Include/Common/: ISingletonObject.h  Macro.h  MainLoop.h
Include/ConfigParser/: ConfigItem.h
Source/: Main.cpp
Source/Common/: MainLoop.cpp
Source/ConfigParser/: ConfigItem.cpp
config/: pwol.conf
